<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_fontset_ascii"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/fragment_printer_spinner_ascii"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_fontset_extcode"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/fragment_printer_spinner_extcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:spinnerMode="dialog" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fragment_printer_bitmap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_bitmap_no"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_spaceset_word" />

        <EditText
            android:id="@+id/fragment_printer_spaceset_word_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/printer_edit_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_spaceset_line" />

        <EditText
            android:id="@+id/fragment_printer_spaceset_line_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/printer_edit_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_leftindent" />

        <EditText
            android:id="@+id/fragment_printer_leftindent_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/printer_edit_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_setgray" />

        <EditText
            android:id="@+id/fragment_printer_setgray_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/printer_edit_gray_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fragment_printer_doublewidth_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_normal_width"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fragment_printer_doubleheight_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_normal_height"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fragment_printer_invert_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_normal"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_step" />

        <EditText
            android:id="@+id/fragment_printer_step_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/printer_step_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/printer_prnstr" />

        <EditText
            android:id="@+id/fragment_printer_prnstr_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/printer_test_str"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fragment_printer_status_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_status"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fragment_printer_status_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/fragment_printer_getdotline_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_getdotline"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fragment_printer_getdotline_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/fragment_printer_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/printer_start"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>