<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fragment_getradom_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/random_number"
        android:scrollbars="vertical"
        android:maxLines="5"
        android:padding="10dp" />

    <EditText
        android:id="@+id/fragment_getradom_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        android:hint="@string/random_number_len" />

    <Button
        android:id="@+id/fragment_getradom_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_random_number" />

</LinearLayout>